--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
+        "illuminate/contracts": "^10.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0"
+        "tempest/highlight": "dev-main"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
