--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "filament/filament": "^3.0",
         "illuminate/contracts": "^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "tempest/highlight": "dev-main"
+        "tempest/highlight": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
