--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     "require": {
         "php": "^8.3",
         "filament/filament": "^3.0",
-        "illuminate/contracts": "^10.0|^11.0",
+        "illuminate/contracts": "^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "tempest/highlight": "^1.0"
+        "tempest/highlight": "^2.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
